--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,4 +27,10 @@
   @include angular-material-theme($purple-theme);
 }
 
+.nostyle{
+  position:fixed;
+  left:0px;
+  top:0px;
+}
+
 @import 'theme/default-theme/theme';
