--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
   <div fxLayout="column" fxFill appTheme>
-    <app-header #header></app-header>
-    <div fxFlex class="app-component">
+    <app-header #header aria-label="Kopfbereich"></app-header>
+    <div fxFlex class="app-component" aria-label="Inhaltsbereich">
       <router-outlet></router-outlet>
     </div>
-    <app-footer></app-footer>
+    <app-footer aria-label="Fußbereich"></app-footer>
   </div>
