--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -40,28 +40,28 @@
       </button>
     </mat-menu>
 
-    <button mat-button *ngIf="user && deviceType === 'desktop'" [matMenuTriggerFor]="userMenu">
+    <button mat-button *ngIf="user && deviceType === 'desktop'" [matMenuTriggerFor]="userMenu" aria-label="Konto-Button. Öffnet Modalfenster in dem man sich einloggen kann.">
       <div class="label-icon">
         <mat-icon *ngIf="!user.isGuest" class="header-icons">account_box</mat-icon>
         <mat-icon *ngIf="user.isGuest" class="header-icons">meeting_room</mat-icon>
-        <h3 *ngIf="!user.isGuest">{{'header.my-account' | translate}}</h3>
-        <h3 *ngIf="user.isGuest">{{'header.my-guest-account' | translate}}</h3>
+        <h2 *ngIf="!user.isGuest">{{'header.my-account' | translate}}</h2>
+        <h2 *ngIf="user.isGuest">{{'header.my-guest-account' | translate}}</h2>
       </div>
     </button>
 
-    <button mat-icon-button *ngIf="user && deviceType === 'mobile'" [matMenuTriggerFor]="userMenu">
+    <button mat-icon-button *ngIf="user && deviceType === 'mobile'" [matMenuTriggerFor]="userMenu" aria-label="Konto-Button. Öffnet Modalfenster in dem man sich einloggen kann.">
       <mat-icon *ngIf="!user.isGuest" class="header-icons">account_box</mat-icon>
       <mat-icon *ngIf="user.isGuest" class="header-icons">meeting_room</mat-icon>
     </button>
 
-    <button mat-button *ngIf="!user && deviceType === 'desktop'" (click)=login(false)>
+    <button mat-button *ngIf="!user && deviceType === 'desktop'" (click)=login(false) aria-label="Konto-Button. Öffnet Modalfenster in dem man sich einloggen kann.">
       <div class="label-icon">
         <mat-icon class="header-icons">account_box</mat-icon>
-        <h3 *ngIf="deviceType === 'desktop'">{{'header.login' | translate}}</h3>
+        <h2 *ngIf="deviceType === 'desktop'">{{'header.login' | translate}}</h2>
       </div>
     </button>
 
-    <button mat-icon-button *ngIf="!user && deviceType === 'mobile'" (click)=login(false)>
+    <button mat-icon-button *ngIf="!user && deviceType === 'mobile'" (click)=login(false) aria-label="Konto-Button. Öffnet Modalfenster in dem man sich einloggen kann." >
       <mat-icon class="header-icons">account_box</mat-icon>
     </button>
   </mat-toolbar-row>
