--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
-  <div fxLayout="column" fxFill appTheme>
+<div fxLayout="column" fxFill appTheme>
+  <header>
     <app-header #header></app-header>
+  </header>
+  <main>
     <div fxFlex class="app-component">
       <router-outlet></router-outlet>
     </div>
+  </main>
+  <footer>
     <app-footer></app-footer>
-  </div>
+  </footer>
+</div>
