Adapt login button description in header component

--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -58,7 +58,7 @@
       mat-button
       *ngIf="!user && deviceType === 'desktop'"
       (click)=login(false)
-      title="{{'header.login' | translate}}"
+      title="{{'header.login-description' | translate}}"
     >
       <div class="label-icon">
         <mat-icon class="header-icons">account_box</mat-icon>
